--- a/app/styles/schedules/studies.styl
+++ b/app/styles/schedules/studies.styl
@@ -238,81 +238,86 @@
   // Mobile schedule
   .lessons-mobile
     .lesson-cell
-      position relative
-      border-bottom: 1px solid lighten($brand-info, 82%)
-      overflow: hidden
-      height: 64px
-      text-align center
-      font-size $font-size-medium
-      &:active, &:hover, &.active
-        cursor: pointer
-      &.current
-        border: 1px solid $brand-warning
-      // Arrow when details showed?
-      .arrow
-        position absolute
-      // Class name and place
-      .lesson-inside
-        position absolute
-        border-left 1px solid lighten($brand-info, 82%)
-        border-right 1px solid lighten($brand-info, 82%)
+      .lesson-cell-into
+        position relative
+        border-bottom: 1px solid lighten($brand-info, 82%)
         overflow: hidden
-        padding 0 40px
-        &:hover
-          background lighten($brand-info-bg, 80%)
-        .lesson-name
-          white-space nowrap
-          color #4b5456
-        .lesson-place
-          color #3baba1
+        height: 64px
+        text-align center
+        font-size $font-size-medium
+        &:active, &:hover, &.active
+          cursor: pointer
+        &.current
+          border: 1px solid $brand-warning
+        // Arrow when details showed?
+        .arrow
+          position absolute
+        // Class name and place
+        .lesson-inside
+          position absolute
+          border-left 1px solid lighten($brand-info, 82%)
+          border-right 1px solid lighten($brand-info, 82%)
+          overflow: hidden
+          padding 0 60px
+          &:hover
+            background lighten($brand-info-bg, 80%)
+          .lesson-name
+            white-space nowrap
+            color #4b5456
+          .lesson-place
+            color #3baba1
+            margin-left 10px
+        .lesson-parity-0
+          line-height 64px
+        .lesson-parity-1
+          line-height 32px
+          font-size $font-size-base
+          border-bottom 1px solid lighten($brand-info, 82%)
+        .lesson-parity-2
+          line-height 32px
+          font-size $font-size-base
+          top 31px
+          border-top 1px solid lighten($brand-info, 82%)
+        .lesson-half-0
+          left - 2px
+          right - 2px
+        .lesson-half-1
+          background #fff
+          width 50%
+          right 45%
+          border-left none
+          padding 0 10px 0 50px
+        .lesson-half-2
+          background #fff
+          width 50%
+          left 50%
+          border-right none
+          padding 0 10px
+        // Class number
+        .lesson-time-wrapper
+          float left
           margin-left 10px
-      .lesson-parity-0
-        line-height 64px
-      .lesson-parity-1
-        line-height 32px
-        font-size $font-size-base
-        border-bottom 1px solid lighten($brand-info, 82%)
-      .lesson-parity-2
-        line-height 32px
-        font-size $font-size-base
-        top 31px
-        border-top 1px solid lighten($brand-info, 82%)
-      .lesson-half-0
-        left - 2px
-        right - 2px
-      .lesson-half-1
-        background #fff
-        width 50%
-        right 50%
-        border-left none
-      .lesson-half-2
-        background #fff
-        width 50%
-        left 50%
-        border-right none
-      // Class number
-      .lesson-time-wrapper
-        float left
-        color $brand-primary
-        padding 15px 0
-        position absolute
-        z-index 1000
-        .lesson-time
-          opacity 0.4
-          &.current
-            color: $brand-warning
+          color $brand-primary
+          padding 15px 0
+          position absolute
+          z-index 1000
+          .lesson-time
+            opacity 0.4
+            &.current
+              color: $brand-warning
+              opacity 1
+            .lesson-time-number, .lesson-time-start
+              margin: 0
+        // Maker hovered row class number more visible
+        &:hover
+          .lesson-time
             opacity 1
-          .lesson-time-number, .lesson-time-start
-            margin: 0
-      // Maker hovered row class number more visible
-      &:hover
-        .lesson-time
-          opacity 1
     //First class top border
     > :first-child + div.lesson-cell
-      border-top: 1px solid lighten($brand-info, 82%)
-      &.current
-        border-top: 1px solid $brand-warning
+      .lesson-cell-into
+        border-top: 1px solid lighten($brand-info, 82%)
+        &.current
+          border-top: 1px solid $brand-warning
     // Day of week
     .lesson-cell-title
       margin 45px 0 30px 0
