--- a/app/styles/schedules/studies.styl
+++ b/app/styles/schedules/studies.styl
@@ -58,9 +58,8 @@ $sched-cell-hover-bg ?= lighten($brand-info-bg, 80%)
       margin 0
       padding 0
       font-size $font-size-medium
-      color #aaa
+      color #ddd
       font-weight 100
-      letter-spacing 1px
       white-space nowrap
       vertical-align bottom
 
@@ -117,6 +116,8 @@ $sched-cell-hover-bg ?= lighten($brand-info-bg, 80%)
             color: $brand-warning
             opacity 1
 
+          .lesson-time-number
+            font-weight 600
           .lesson-time-number, .lesson-time-start
             margin: 0
 
@@ -227,6 +228,7 @@ $sched-cell-hover-bg ?= lighten($brand-info-bg, 80%)
         text-align: center
         padding: 5px
         color: #4b5456
+        font-weight 600
 
       .lesson-cell-title-date
         display: inline-block;
