--- a/app/styles/_variables.styl
+++ b/app/styles/_variables.styl
@@ -37,8 +37,7 @@ $link-hover-color ?=      $brand-warning;
 
 // Typography
 // -------------------------
-
-$font-family-sans-serif ?=  "Helvetica Neue", Helvetica, Arial, sans-serif;
+$font-family-sans-serif ?=  'Helvetica Neue', 'Open Sans', Helvetica, Arial, sans-serif;
 $font-family-serif ?=       Georgia, "Times New Roman", Times, serif;
 $font-family-monospace ?=   Monaco, Menlo, Consolas, "Courier New", monospace;
 $font-family-base ?=        $font-family-sans-serif;
