--- a/app/styles/schedules/exams.styl
+++ b/app/styles/schedules/exams.styl
@@ -1,5 +1,6 @@
 @import "../_variables"
 
+/*
 .tests-and-exams
   font-family: "Helvetica Light"
   max-width: 750px
@@ -37,3 +38,4 @@
     .audit
       font-size: 1.1em
       color: #4b5456
+      */
