--- a/app/partials/schedules/exams.jade
+++ b/app/partials/schedules/exams.jade
@@ -1,27 +1,27 @@
 div.tests-and-exams(ng-controller='SchedulesExamsCtrl')
-    span#test-title Зачётная неделя (с 22 дек. по 30 дек.)
-    .info
-        span.date 25 дек.
-        span.time 9:00
-        span.name АСВТ
-        span.teacher Сибиряков Александр Евгеньевич
-        span.audit 632
-    div.info
-        span.date 26 дек.
-        span.time 9:00
-        span.name Математический Анализ
-        span.teacher Кошелев Антон Александрович
-        span.audit 632
-    span#exam-title Экзамены (с 8 янв. по 30 янв.)
-    div.info
-        span.date 25 дек.
-        span.time 9:00
-        span.name АСВТ
-        span.teacher Сибиряков Александр Евгеньевич
-        span.audit 632
-    div.info
-        span.date 26 дек.
-        span.time 9:00
-        span.name Математический Анализ
-        span.teacher Кошелев Антон Александрович
-        span.audit 632
+    #schedule-greed(breakpoint="min-width: 768px")
+        // Navigation
+        .schedule-header
+            .navbar.navbar-default
+                .container.row-fluid(bindonce)
+                    .col-sm-4
+                        a.back-btn(ng-click="showGroups()")
+                            .back-logo-square
+                                i.stico-groups-list
+                            span.group-name(bo-html="$routeParams.groupName")
+                        .type-changer
+                            a(ng-click="showScheduleType('studies')") Семестр
+                            a.active Сессия
+                    .col-sm-4.text-center
+                        span.schedule-updated-text
+                            span(ng-if="last_update", bo-html="'Обновлено ' + '{{ last_update | relativeDate}}'")
+                            span(ng-if="!last_update") Проверка обновлений...
+
+
+        h2.container Зачётная неделя (с 22 дек. по 30 дек.)
+        .info.container
+            span.date 25 дек.
+            span.time 9:00
+            span.name АСВТ
+            span.teacher Сибиряков Александр Евгеньевич
+            span.audit 632
