added mobile schedule navigation

--- a/app/styles/_variables.styl
+++ b/app/styles/_variables.styl
@@ -4,6 +4,7 @@
 // Global values
 // --------------------------------------------------
 
+
 // Grays
 // -------------------------
 
@@ -649,3 +650,13 @@ $media-screen-min-lg-desktop ?= screen-min($screen-lg)
 // Min Max
 $media-tablet ?= min-max($screen-sm, $screen-sm-max)
 $media-desktop ?= min-max($screen-md, $screen-md-max)
+
+
+// APPLICATION variables
+// --------------------------------------------------
+
+// Schedule
+$sched-border-color ?= lighten($brand-primary, 93%)
+$sched-inner-border-color ?= lighten($brand-primary, 93%)
+$sched-cell-hover-bg ?= lighten($brand-info-bg, 80%)
+$sched-nav-height ?= 35px
