--- a/app/styles/animation/animation.styl
+++ b/app/styles/animation/animation.styl
@@ -1,5 +1,11 @@
 @import "/bower_components/bootstrap-stylus/stylus/mixins"
 
+@keyframes spin {
+    to {
+      transform: rotate(360deg);
+    }
+}
+
 @keyframes empty {
   from {
     -webkit-transform translateX(0)
