--- a/app/partials/schedules/studies.jade
+++ b/app/partials/schedules/studies.jade
@@ -3,7 +3,7 @@ div(ng-controller='SchedulesStudiesCtrl')
         #schedule-greed(breakpoint="min-width: 768px", class="week-{{currentParity}}", ng-init="classes=['1','2','3','4','5','6']")
 
             // Three columns
-            div(ng-if="matches", ng-init="lines=[['Mon', 'Tue', 'Wed'], ['Thu', 'Fri', 'Sat']]", bindonce)
+            div(ng-if="matches", class="desktop", ng-init="lines=[['Mon', 'Tue', 'Wed'], ['Thu', 'Fri', 'Sat']]", bindonce)
                 // Navigation
                 .schedule-header
                     .navbar.navbar-default
@@ -36,7 +36,7 @@ div(ng-controller='SchedulesStudiesCtrl')
                                         span {{dowDates['Sat'] | date: 'dd MMM'}}
                                         i.stico-arrow-right
                 // Schedule
-                .lessons-desktop(ng-repeat="line in lines")
+                div(ng-repeat="line in lines")
                     .container.row-fluid
                         .col-sm-4(ng-repeat="dow in line")
                             h5.lesson-cell-title(ng-class="{'current': currentDow == dow}")
@@ -61,8 +61,24 @@ div(ng-controller='SchedulesStudiesCtrl')
 
 
             // One column
-            div(ng-if="!matches", ng-init="lines=['Mon', 'Tue', 'Wed', 'Thu', 'Fri', 'Sat']", bindonce)
+            div(ng-if="!matches", ng-init="lines=['Mon', 'Tue', 'Wed', 'Thu', 'Fri', 'Sat']", bindonce, class="mobile")
                 // Navigation
+                .schedule-header
+                    .navbar.navbar-default
+                        .row-fluid(bindonce)
+                            .col-xs-4
+                                a.back-btn(ng-click="showGroups()")
+                                    i.stico-arrow-right.rotate-180
+                                    span Группы
+                            .col-xs-4.text-center.nav-middle
+                                span.group-name(bo-html="$routeParams.groupName")
+                                span.schedule-updated-text
+                                    span(ng-if="!last_update") Обновление...
+                            //(ng-if="group && group.state=='exams'")
+                            .col-xs-4.text-right
+                                .type-changer
+                                    a(ng-click="showScheduleType('exams')")
+                                        span Сессия
 
                 // Schedule
                 .lessons-mobile(ng-repeat="dow in lines")
