--- a/app/styles/schedules/studies.styl
+++ b/app/styles/schedules/studies.styl
@@ -1,110 +1,6 @@
 @import "../_variables"
 @import "/bower_components/bootstrap-stylus/stylus/mixins"
 
-// Variables
-$sched-border-color ?= lighten($brand-primary, 93%)
-$sched-inner-border-color ?= lighten($brand-primary, 93%)
-$sched-cell-hover-bg ?= lighten($brand-info-bg, 80%)
-$sched-nav-height ?= 35px
-
-// Navigation
-.schedule-header
-  user-select(none)
-  .navbar
-    background #fff
-    border none
-    height $sched-nav-height
-    min-height 0
-    margin-bottom 0
-    white-space nowrap
-
-    // Remove link decoration
-    a
-      &:active, &:hover, &.active
-        text-decoration none
-
-    // Back to groups list button
-    .back-btn
-      cursor pointer
-      padding 0 15px 0 0
-      font-size $font-size-large
-      height $sched-nav-height
-      font-weight 400
-      display block
-      float left
-
-      .back-logo-square
-        float left
-        background $brand-info
-        padding 4px
-        color #fff
-        .stico-groups-list
-          display block
-
-      .group-name
-        margin-left 10px
-      &:hover
-        .back-logo-square
-          background darken($brand-info, 20%)
-        .group-name
-          color darken($link-color, 25%)
-
-    // Change schedule type
-    .type-changer
-      @media (min-width: 992px)
-        display inline-block
-        border 1px solid $brand-info
-        border-radius $line-height-computed
-        height ($sched-nav-height - 1)
-        line-height ($sched-nav-height - 2)
-        a
-          font-size $font-size-base
-          cursor pointer
-          padding 8px 9px
-          &.active
-            background $brand-info
-            border-radius $line-height-computed
-            color #fff
-            margin-right: -1px
-            margin-left: -1px
-      @media (max-width: 991px)
-        display inline-block
-        height $sched-nav-height
-        a
-          font-size $font-size-medium
-          line-height $sched-nav-height
-          &.active
-            display none
-
-
-    // Update indicator
-    .schedule-updated-text
-      margin 0
-      padding 0
-      font-size $font-size-medium
-      color #ddd
-      font-weight 100
-      white-space nowrap
-      line-height $sched-nav-height
-
-    // Next week button
-    .next-week-btn
-      font-size $font-size-medium
-      font-weight 200
-      white-space nowrap
-      margin-right -5px
-      line-height $sched-nav-height
-
-      a
-        cursor pointer
-        padding 5px
-        span
-          cursor pointer
-          padding 0 7px
-      .stico-arrow-right
-        margin-top -2px
-        vertical-align middle
-
 
 // Schedule
 #schedule-greed
@@ -118,8 +14,7 @@ $sched-nav-height ?= 35px
     .lesson-parity-2
       opacity 0.2
 
-  // Desktop schedule
-  .lessons-desktop
+  .desktop
     .lessons-row
       // Class number
       .lesson-time-wrapper
@@ -273,8 +168,7 @@ $sched-nav-height ?= 35px
           font-weight 300
 
 
-  // Mobile schedule
-  .lessons-mobile
+  .mobile
     .lesson-row
       .lesson-cell
         position relative
@@ -350,11 +244,6 @@ $sched-nav-height ?= 35px
             .lesson-time-number, .lesson-time-start
               margin: 0
 
-    //First class top border
-    > :first-child + div.lesson-row
-      .lesson-cell
-        border-top: 1px solid $sched-border-color
-
     // Day of week
     .lesson-cell-title
       margin 45px 0 30px 0
@@ -376,3 +265,10 @@ $sched-nav-height ?= 35px
           padding: 7px 10px;
         .lesson-cell-title-date
           color: $brand-primary
+
+    //First class top border
+    h5:first-child
+      margin-top 25px !important
+    :first-child + div.lesson-row
+      .lesson-cell
+        border-top: 1px solid $sched-border-color
